force-app/main/default/objects/WorkOrder/fields/Horas_ESE__c.field-meta.xml
<CustomField>
    <fullName>Horas_ESE__c</fullName>
    <formula>(IF(OR(ISBLANK(Data_e_Hora_do_E_S_E_T__c), ISBLANK(Data_e_Hora_do_E_S_E_I__c)), 0, (Data_e_Hora_do_E_S_E_T__c - Data_e_Hora_do_E_S_E_I__c)))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas ESE</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>