force-app/main/default/objects/WorkOrder/fields/Horas_Higieniza_o__c.field-meta.xml
<CustomField>
    <fullName>Horas_Higieniza_o__c</fullName>
    <formula>(IF(OR(ISBLANK(Data_e_Hora_da_Higienizacao_T__c), ISBLANK(Data_e_Hora_da_Higienizacao_I__c)), 0, (Data_e_Hora_da_Higienizacao_T__c - Data_e_Hora_da_Higienizacao_I__c)))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Higienização</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>