force-app/main/default/objects/WorkOrder/fields/Horas_Manuten_o__c.field-meta.xml
<CustomField>
    <fullName>Horas_Manuten_o__c</fullName>
    <formula>(IF(OR(ISBLANK(Data_e_Hora_da_Manutencao_T__c), ISBLANK(Data_e_Hora_da_Manutencao_I__c)), 0, (Data_e_Hora_da_Manutencao_T__c - Data_e_Hora_da_Manutencao_I__c))+ 
IF(OR(ISBLANK(Data_e_Hora_da_Manuten_o_Pt2_T__c), ISBLANK(Data_e_Hora_da_Manuten_o_Pt2_I__c)), 0, (Data_e_Hora_da_Manuten_o_Pt2_T__c - Data_e_Hora_da_Manuten_o_Pt2_I__c))+ 
IF(OR(ISBLANK(Data_Hora_da_Manuten_o_Pt3_T__c), ISBLANK(Data_Hora_da_Manuten_o_Pt3__c)), 0, (Data_Hora_da_Manuten_o_Pt3_T__c - Data_Hora_da_Manuten_o_Pt3__c)))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Manutenção</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>