force-app/main/default/objects/WorkOrder/fields/Horas_Trabalhadas_Cobradas__c.field-meta.xml
<CustomField>
    <fullName>Horas_Trabalhadas_Cobradas__c</fullName>
    <formula>TEXT(
	FLOOR(Horas_Trabalhadas_Cobradas_C_pia__c/24)
)  
&amp; &quot; Dias &quot; &amp;
TEXT(
	FLOOR(
		MOD(
			(Horas_Trabalhadas_Cobradas_C_pia__c/24)*24,
			24
		)
	)
)  
&amp;&quot; Horas &quot; &amp;
TEXT(
	FLOOR(
		MOD(
			(Horas_Trabalhadas_Cobradas_C_pia__c/24)*1440,
			60
		)
	)
) 
&amp;&quot; Minutos &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Trabalhadas Cobradas</label>
    <type>Text</type>
</CustomField>