force-app/main/default/objects/WorkOrder/fields/Horas_Trabalhadas_Cobradas_C_pia__c.field-meta.xml
<CustomField>
    <fullName>Horas_Trabalhadas_Cobradas_C_pia__c</fullName>
    <label>Horas Trabalhadas Cobradas (Cópia)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>