force-app/main/default/objects/WorkOrder/fields/Horas_Trabalhadas_Real_Calculo__c.field-meta.xml
<CustomField>
    <fullName>Horas_Trabalhadas_Real_Calculo__c</fullName>
    <formula>(
	IF(OR(ISBLANK(Data_e_Hora_da_Higienizacao_T__c), ISBLANK(Data_e_Hora_da_Higienizacao_I__c)), 0, (Data_e_Hora_da_Higienizacao_T__c - Data_e_Hora_da_Higienizacao_I__c))+
	IF(OR(ISBLANK(Data_e_Hora_da_Calibracao_T__c), ISBLANK(Data_e_Hora_da_Calibracao_I__c)), 0, (Data_e_Hora_da_Calibracao_T__c - Data_e_Hora_da_Calibracao_I__c))+
	IF(OR(ISBLANK(Data_e_Hora_da_Qualifica_o_T__c), ISBLANK(Data_e_Hora_da_Qualifica_o_I__c	)), 0, (Data_e_Hora_da_Qualifica_o_T__c	 - Data_e_Hora_da_Qualifica_o_I__c	))+
	IF(OR(ISBLANK(Data_Hora_da_Qualifica_o_Pt2_T__c), ISBLANK(Data_Hora_da_Qualifica_o_Pt2_I__c)), 0, (Data_Hora_da_Qualifica_o_Pt2_T__c - Data_Hora_da_Qualifica_o_Pt2_I__c))+
	IF(OR(ISBLANK(Data_Hora_da_Qualifica_o_Pt3_T__c), ISBLANK(Data_Hora_da_Qualifica_o_Pt3_I__c)), 0, (Data_Hora_da_Qualifica_o_Pt3_T__c - Data_Hora_da_Qualifica_o_Pt3_I__c))+
	IF(OR(ISBLANK(Data_Hora_da_Qualifica_o_Pt4_T__c), ISBLANK(Data_Hora_da_Qualifica_o_Pt4_I__c)), 0, (Data_Hora_da_Qualifica_o_Pt4_T__c - Data_Hora_da_Qualifica_o_Pt4_I__c))+
	IF(OR(ISBLANK(Data_Hora_da_Qualifica_o_Pt5_T__c), ISBLANK(Data_Hora_da_Qualifica_o_Pt5_I__c)), 0, (Data_Hora_da_Qualifica_o_Pt5_T__c - Data_Hora_da_Qualifica_o_Pt5_I__c))+
	IF(OR(ISBLANK(Data_e_Hora_do_E_S_E_T__c), ISBLANK(Data_e_Hora_do_E_S_E_I__c)), 0, (Data_e_Hora_do_E_S_E_T__c - Data_e_Hora_do_E_S_E_I__c))+
	IF(OR(ISBLANK(Data_e_Hora_da_Avalia_o_T_cnica_T__c), ISBLANK(Data_e_Hora_da_Avalia_o_T_cnica_I__c)), 0, (Data_e_Hora_da_Avalia_o_T_cnica_T__c - Data_e_Hora_da_Avalia_o_T_cnica_I__c))+
	IF(OR(ISBLANK(Data_Hora_da_Avalia_o_T_cnica_Pt2_T__c), ISBLANK(Data_Hora_da_Avalia_o_T_cnica_Pt2__c)), 0, (Data_Hora_da_Avalia_o_T_cnica_Pt2_T__c - Data_Hora_da_Avalia_o_T_cnica_Pt2__c))+
	IF(OR(ISBLANK(Data_Hora_da_Avalia_o_T_cnica_Pt3_T__c), ISBLANK(Data_Hora_da_Avalia_o_T_cnica_Pt3__c)), 0, (Data_Hora_da_Avalia_o_T_cnica_Pt3_T__c - Data_Hora_da_Avalia_o_T_cnica_Pt3__c))+
	IF(OR(ISBLANK(Data_e_Hora_da_Manutencao_T__c), ISBLANK(Data_e_Hora_da_Manutencao_I__c)), 0, (Data_e_Hora_da_Manutencao_T__c - Data_e_Hora_da_Manutencao_I__c))+
	IF(OR(ISBLANK(Data_e_Hora_da_Manuten_o_Pt2_T__c), ISBLANK(Data_e_Hora_da_Manuten_o_Pt2_I__c)), 0, (Data_e_Hora_da_Manuten_o_Pt2_T__c - Data_e_Hora_da_Manuten_o_Pt2_I__c))+
	IF(OR(ISBLANK(Data_Hora_da_Manuten_o_Pt3_T__c), ISBLANK(Data_Hora_da_Manuten_o_Pt3__c)), 0, (Data_Hora_da_Manuten_o_Pt3_T__c - Data_Hora_da_Manuten_o_Pt3__c))+
	IF(OR(ISBLANK(Data_e_Hora_do_Runin_T__c), ISBLANK(Data_e_Hora_do_Runin_I__c)), 0, (Data_e_Hora_do_Runin_T__c - Data_e_Hora_do_Runin_I__c))+
	IF(OR(ISBLANK(Data_e_Hora_do_2_Runin_T__c), ISBLANK(Data_e_Hora_do_2_Runin_I__c)), 0, (Data_e_Hora_do_2_Runin_T__c - Data_e_Hora_do_2_Runin_I__c))+
	IF(OR(ISBLANK(Data_e_Hora_da_Inspe_o_T__c), ISBLANK(Data_e_Hora_da_Inspe_o_I__c)), 0, (Data_e_Hora_da_Inspe_o_T__c - Data_e_Hora_da_Inspe_o_I__c))+
	IF(OR(ISBLANK(Data_e_Hora_da_Instala_o_T__c), ISBLANK(Data_e_Hora_da_Instala_o_I__c)), 0, (Data_e_Hora_da_Instala_o_T__c - Data_e_Hora_da_Instala_o_I__c))+
	IF(OR(ISBLANK(Data_Hora_da_Instala_o_Pt2_T__c	), ISBLANK(Data_Hora_da_Instala_o_Pt2_I__c)), 0, (Data_Hora_da_Instala_o_Pt2_T__c	 - Data_Hora_da_Instala_o_Pt2_I__c))+
	IF(OR(ISBLANK(Data_Hora_da_Instala_o_Pt3_T__c), ISBLANK(Data_Hora_da_Instala_o_Pt3_I__c)), 0, (Data_Hora_da_Instala_o_Pt3_T__c - Data_Hora_da_Instala_o_Pt3_I__c))
)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Trabalhadas Real (Cálculo)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>