force-app/main/default/objects/WorkOrder/fields/Horas_Trabalhadas_Real_Copia__c.field-meta.xml
<CustomField>
    <fullName>Horas_Trabalhadas_Real_Copia__c</fullName>
    <label>Horas Trabalhadas Real (Cópia)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>