force-app/main/default/objects/WorkOrder/fields/Houve_um_Segundo_Runin__c.field-meta.xml
<CustomField>
    <fullName>Houve_um_Segundo_Runin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Houve um Segundo Run-in?</label>
    <type>Checkbox</type>
</CustomField>