force-app/main/default/objects/WorkOrder/fields/ID_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>ID_da_Conta__c</fullName>
    <label>ID da Conta</label>
    <length>30</length>
    <type>Text</type>
</CustomField>