force-app/main/default/objects/WorkOrder/fields/ID_Tag__c.field-meta.xml
<CustomField>
    <fullName>ID_Tag__c</fullName>
    <formula>Asset.ID_Tag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID/Tag</label>
    <type>Text</type>
</CustomField>