force-app/main/default/objects/WorkOrder/fields/idDocAutentiquePreAutorizacao__c.field-meta.xml
<CustomField>
    <fullName>idDocAutentiquePreAutorizacao__c</fullName>
    <label>ID do Doc. ClickSign (Pré-Autorização)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>