force-app/main/default/objects/WorkOrder/fields/Ignorar_fluxos__c.field-meta.xml
<CustomField>
    <fullName>Ignorar_fluxos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignorar fluxos</label>
    <type>Checkbox</type>
</CustomField>