force-app/main/default/objects/WorkOrder/fields/imagemAssinaturaTermino__c.field-meta.xml
<CustomField>
    <fullName>imagemAssinaturaTermino__c</fullName>
    <formula>IF(
OR(ISBLANK(assinaturaTermino__c), NOT(CONTAINS(assinaturaTermino__c, &quot;hospcom&quot;))),
IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=015310000080hog&amp;oid=00Di0000000JVhH&amp;lastMod=1502888568000&quot; , &quot;&quot;, 60,60),
IMAGE(assinaturaTermino__c, &quot;&quot;, 60,60)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem Assinatura Término</label>
    <type>Text</type>
</CustomField>