force-app/main/default/objects/WorkOrder/fields/Img_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Img_Tecnico__c</fullName>
    <formula>Owner:User.URL_Foto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Img Tecnico</label>
    <type>Text</type>
</CustomField>