force-app/main/default/objects/WorkOrder/fields/Inicio_Aguardando_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Aguardando_Atendimento__c</fullName>
    <label>Inicio Aguardando Atendimento</label>
    <type>DateTime</type>
</CustomField>