force-app/main/default/objects/WorkOrder/fields/Inicio_Analise_Concluida__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Analise_Concluida__c</fullName>
    <label>Início Análise Concluída</label>
    <type>DateTime</type>
</CustomField>