force-app/main/default/objects/WorkOrder/fields/Inicio_Em_Analise__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Em_Analise__c</fullName>
    <label>Início Em Análise</label>
    <type>DateTime</type>
</CustomField>