force-app/main/default/objects/WorkOrder/fields/Inicio_Em_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Em_Atendimento__c</fullName>
    <label>Inicio Em Atendimento</label>
    <type>DateTime</type>
</CustomField>