force-app/main/default/objects/WorkOrder/fields/Inspe_o_da_Caixa_do_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Inspe_o_da_Caixa_do_Equipamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspeção da Caixa do Equipamento?</label>
    <type>Checkbox</type>
</CustomField>