force-app/main/default/objects/WorkOrder/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <formula>Asset.Linha__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linha</label>
    <type>Text</type>
</CustomField>