force-app/main/default/objects/WorkOrder/fields/Local_de_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Local_de_Atendimento__c</fullName>
    <label>Local de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTERNO</fullName>
            </value>
            <value>
                <fullName>EXTERNO</fullName>
            </value>
            <value>
                <fullName>INTERNO E EXTERNO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>