force-app/main/default/objects/WorkOrder/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <formula>TEXT( Asset.Marca__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>