force-app/main/default/objects/WorkOrder/fields/Minutos_Trabalhados__c.field-meta.xml
<CustomField>
    <fullName>Minutos_Trabalhados__c</fullName>
    <formula>((IF(ISBLANK(Data_e_Hora_da_Higienizacao_T__c - Data_e_Hora_da_Higienizacao_I__c),0,(Data_e_Hora_da_Higienizacao_T__c - Data_e_Hora_da_Higienizacao_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_da_Calibracao_T__c - Data_e_Hora_da_Calibracao_I__c),0,(Data_e_Hora_da_Calibracao_T__c - Data_e_Hora_da_Calibracao_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_da_Inspe_o_T__c - Data_e_Hora_da_Inspe_o_I__c),0,(Data_e_Hora_da_Inspe_o_T__c - Data_e_Hora_da_Inspe_o_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_da_Instala_o_T__c - Data_e_Hora_da_Instala_o_I__c),0,(Data_e_Hora_da_Instala_o_T__c - Data_e_Hora_da_Instala_o_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_da_Manutencao_T__c - Data_e_Hora_da_Manutencao_I__c),0,(Data_e_Hora_da_Manutencao_T__c - Data_e_Hora_da_Manutencao_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_da_Qualifica_o_T__c - Data_e_Hora_da_Qualifica_o_I__c),0,(Data_e_Hora_da_Qualifica_o_T__c - Data_e_Hora_da_Qualifica_o_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_do_E_S_E_T__c - Data_e_Hora_do_E_S_E_I__c),0,(Data_e_Hora_do_E_S_E_T__c - Data_e_Hora_do_E_S_E_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_do_Runin_T__c - Data_e_Hora_do_Runin_I__c),0,(Data_e_Hora_do_Runin_T__c - Data_e_Hora_do_Runin_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_do_2_Runin_T__c - Data_e_Hora_do_2_Runin_I__c),0,(Data_e_Hora_do_2_Runin_T__c - Data_e_Hora_do_2_Runin_I__c)) 
+ 
IF(ISBLANK(Data_e_Hora_do_Teste_T__c - Data_e_Hora_do_Teste_I__c),0,(Data_e_Hora_do_Teste_T__c - Data_e_Hora_do_Teste_I__c)))*24 -  Hora_Trabalhada__c)*60</formula>
    <label>Minutos Trabalhados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>