force-app/main/default/objects/WorkOrder/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <formula>Asset.Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo</label>
    <type>Text</type>
</CustomField>