force-app/main/default/objects/WorkOrder/fields/N_da_OS_Alterdata__c.field-meta.xml
<CustomField>
    <fullName>N_da_OS_Alterdata__c</fullName>
    <label>Nº da OS Alterdata</label>
    <length>50</length>
    <type>Text</type>
</CustomField>