force-app/main/default/objects/WorkOrder/fields/N_de_Serie_do_Instrumento__c.field-meta.xml
<CustomField>
    <fullName>N_de_Serie_do_Instrumento__c</fullName>
    <formula>Instrumento_de_Medi_o__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº de Série do Instrumento</label>
    <type>Text</type>
</CustomField>