force-app/main/default/objects/WorkOrder/fields/N_Lacre_Retirado__c.field-meta.xml
<CustomField>
    <fullName>N_Lacre_Retirado__c</fullName>
    <label>Nº Lacre Retirado</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>