force-app/main/default/objects/WorkOrder/fields/N_mero_de_Linhas_da_Lista__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Linhas_da_Lista__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Número de Linhas da Lista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>