force-app/main/default/objects/WorkOrder/fields/Nome_da_Testemunha__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Testemunha__c</fullName>
    <label>Nome da Testemunha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>