force-app/main/default/objects/WorkOrder/fields/Numera_o_Etiqueta_Inmetro__c.field-meta.xml
<CustomField>
    <fullName>Numera_o_Etiqueta_Inmetro__c</fullName>
    <label>Nº Etiqueta Retirada</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>