force-app/main/default/objects/WorkOrder/fields/Numero_de_Serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Serie__c</fullName>
    <formula>Asset.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Série</label>
    <type>Text</type>
</CustomField>