force-app/main/default/objects/WorkOrder/fields/O_T_Aberta_a__c.field-meta.xml
<CustomField>
    <fullName>O_T_Aberta_a__c</fullName>
    <formula>IF( ISBLANK( EndDate ) ,TODAY()-DATEVALUE(CreatedDate),EndDate-CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>O.T Aberta (Dias):</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>