force-app/main/default/objects/WorkOrder/fields/Observa_es_T_cnicas_Interno__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_T_cnicas_Interno__c</fullName>
    <description>Observações técnicas somente para uso interno da Hospcom, não disponível para o cliente.</description>
    <inlineHelpText>Observações técnicas somente para uso interno da Hospcom, não disponível para o cliente.</inlineHelpText>
    <label>Observações Técnicas Interno</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>