force-app/main/default/objects/WorkOrder/fields/Observacoes_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_Auditoria__c</fullName>
    <label>Observações Auditoria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>