force-app/main/default/objects/WorkOrder/fields/observacoesAdministrativas__c.field-meta.xml
<CustomField>
    <fullName>observacoesAdministrativas__c</fullName>
    <label>Observações administrativas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>