force-app/main/default/objects/WorkOrder/fields/Oportunidade_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>