force-app/main/default/objects/WorkOrder/fields/Or_amento_Re__c.field-meta.xml
<CustomField>
    <fullName>Or_amento_Re__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orçamento Realizado?</label>
    <type>Checkbox</type>
</CustomField>