force-app/main/default/objects/WorkOrder/fields/OT_ANTERIOR__c.field-meta.xml
<CustomField>
    <fullName>OT_ANTERIOR__c</fullName>
    <label>OT ANTERIOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>