force-app/main/default/objects/WorkOrder/fields/pedidoDemonstracao__c.field-meta.xml
<CustomField>
    <fullName>pedidoDemonstracao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Vincule à uma demonstração</inlineHelpText>
    <label>Demonstração</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.RecordTypeId</field>
            <operation>equals</operation>
            <value>Demonstração</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>