force-app/main/default/objects/WorkOrder/fields/Perfil__c.field-meta.xml
<CustomField>
    <fullName>Perfil__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil</label>
    <type>Text</type>
</CustomField>