force-app/main/default/objects/WorkOrder/fields/Pr_xima_etapa__c.field-meta.xml
<CustomField>
    <fullName>Pr_xima_etapa__c</fullName>
    <label>Próxima etapa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>