force-app/main/default/objects/WorkOrder/fields/Prazo_de_garantia__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_garantia__c</fullName>
    <label>Prazo de garantia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>