force-app/main/default/objects/WorkOrder/fields/Prop_Versao__c.field-meta.xml
<CustomField>
    <fullName>Prop_Versao__c</fullName>
    <label>Prop Versao</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>