force-app/main/default/objects/WorkOrder/fields/Qualificacao_Assistencia__c.field-meta.xml
<CustomField>
    <fullName>Qualificacao_Assistencia__c</fullName>
    <label>Qualificação Assistência</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>