force-app/main/default/objects/WorkOrder/fields/Qualificacao_Assistencia_Editada__c.field-meta.xml
<CustomField>
    <fullName>Qualificacao_Assistencia_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualificação Assistência Editada</label>
    <type>Checkbox</type>
</CustomField>