force-app/main/default/objects/WorkOrder/fields/Qualificacao_Venda_Editada__c.field-meta.xml
<CustomField>
    <fullName>Qualificacao_Venda_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualificação Venda Editada</label>
    <type>Checkbox</type>
</CustomField>