force-app/main/default/objects/WorkOrder/fields/Quantidade_de_Itens_em_Cota_o__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Itens_em_Cota_o__c</fullName>
    <formula>LineItemCount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade de Itens em Cotação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>