force-app/main/default/objects/WorkOrder/fields/Regi_o__c.field-meta.xml
<CustomField>
    <fullName>Regi_o__c</fullName>
    <label>Região</label>
    <length>255</length>
    <type>Text</type>
</CustomField>