force-app/main/default/objects/WorkOrder/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <formula>TEXT(Owner:User.Classificacao_de_Servicos__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional</label>
    <type>Text</type>
</CustomField>