force-app/main/default/objects/WorkOrder/fields/Respons_vel_pela_negocia_o__c.field-meta.xml
<CustomField>
    <fullName>Respons_vel_pela_negocia_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pela negociação</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ordens_de_trabalho3</relationshipName>
    <type>Lookup</type>
</CustomField>