force-app/main/default/objects/WorkOrder/fields/Retrabalho__c.field-meta.xml
<CustomField>
    <fullName>Retrabalho__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrabalho</label>
    <type>Checkbox</type>
</CustomField>