force-app/main/default/objects/WorkOrder/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <formula>Owner:User.Contact.RG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RG</label>
    <type>Text</type>
</CustomField>