force-app/main/default/objects/WorkOrder/fields/Signatario__c.field-meta.xml
<CustomField>
    <fullName>Signatario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signatário</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (Signatário)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho2</relationshipName>
    <type>Lookup</type>
</CustomField>