force-app/main/default/objects/WorkOrder/fields/SignatarioPreAutorizacao__c.field-meta.xml
<CustomField>
    <fullName>SignatarioPreAutorizacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signatário Pré-Autorização</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (Signatário Pré-Autorização)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho6</relationshipName>
    <type>Lookup</type>
</CustomField>