force-app/main/default/objects/WorkOrder/fields/Situacao_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Situacao_Auditoria__c</fullName>
    <label>Situação Auditoria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conforme</fullName>
            </value>
            <value>
                <fullName>Não Conforme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>