force-app/main/default/objects/WorkOrder/fields/Status_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Status_Anterior__c</fullName>
    <label>Status Anterior</label>
    <length>100</length>
    <type>Text</type>
</CustomField>