force-app/main/default/objects/WorkOrder/fields/Status_da_Aprovacao__c.field-meta.xml
<CustomField>
    <fullName>Status_da_Aprovacao__c</fullName>
    <label>Status da Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
            </value>
            <value>
                <fullName>Aguardando Aprovação Financeira</fullName>
            </value>
            <value>
                <fullName>Aguardando Aprovação Jurídica</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>