force-app/main/default/objects/WorkOrder/fields/StatusAssinatura__c.field-meta.xml
<CustomField>
    <fullName>StatusAssinatura__c</fullName>
    <formula>IF(
    ISBLANK(idDocAutentique__c),
    &quot;Não enviado&quot;,
    CASE(
        Fase__c,
        &quot;1&quot;, &quot;Assinatura do cliente&quot;,
        &quot;2&quot;, &quot;Aprovação financeira&quot;,
        &quot;3&quot;, &quot;Assinatura do administrador&quot;,
        &quot;Assinaturas finalizadas&quot; 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status da Assinatura</label>
    <type>Text</type>
</CustomField>